objects/Setup_Object__c.object
<CustomObject>
    <fields>
        <fullName>Access_Id__c</fullName>
        <label>Access Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Other_Values_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>All Other Values Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Lists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Other_Values__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>All Other Values</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Setup_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Setup_Objects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Role__c</fullName>
        <label>Approver Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requester&apos;s Approver</fullName>
                </value>
                <value>
                    <fullName>Approver Role 1</fullName>
                </value>
                <value>
                    <fullName>Approver Role 2</fullName>
                </value>
                <value>
                    <fullName>Approver Role 3</fullName>
                </value>
                <value>
                    <fullName>Approver Role 4</fullName>
                </value>
                <value>
                    <fullName>Approver Role 5</fullName>
                </value>
                <value>
                    <fullName>Approver Role 6</fullName>
                </value>
                <value>
                    <fullName>Approver Role 7</fullName>
                </value>
                <value>
                    <fullName>Approver Role 8</fullName>
                </value>
                <value>
                    <fullName>Approver Role 9</fullName>
                </value>
                <value>
                    <fullName>Approver Role 10</fullName>
                </value>
                <value>
                    <fullName>Approver Role 11</fullName>
                </value>
                <value>
                    <fullName>Approver Role 12</fullName>
                </value>
                <value>
                    <fullName>Approver Role 13</fullName>
                </value>
                <value>
                    <fullName>Approver Role 14</fullName>
                </value>
                <value>
                    <fullName>Approver Role 15</fullName>
                </value>
                <value>
                    <fullName>Approver Role 16</fullName>
                </value>
                <value>
                    <fullName>Final Approver 1</fullName>
                </value>
                <value>
                    <fullName>Final Approver 2</fullName>
                </value>
                <value>
                    <fullName>Final Approver 3</fullName>
                </value>
                <value>
                    <fullName>Marketing Approver</fullName>
                </value>
                <value>
                    <fullName>Sales Approver</fullName>
                </value>
                <value>
                    <fullName>Legal Entity Approver</fullName>
                </value>
                <value>
                    <fullName>Product Approver</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Leader</fullName>
                </value>
                <value>
                    <fullName>Regional Business Leader</fullName>
                </value>
                <value>
                    <fullName>Global Product Line Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Approver Role 17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Field_Id__c</fullName>
        <label>Key Field Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Field_Value__c</fullName>
        <label>Key Field Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Field__c</fullName>
        <label>Key Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Requester</fullName>
                </value>
                <value>
                    <fullName>Market Segment</fullName>
                </value>
                <value>
                    <fullName>End Use</fullName>
                </value>
                <value>
                    <fullName>Sales Office</fullName>
                </value>
                <value>
                    <fullName>Sales Org</fullName>
                </value>
                <value>
                    <fullName>Product Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Profit Center</fullName>
                </value>
                <value>
                    <fullName>PH1</fullName>
                </value>
                <value>
                    <fullName>PH2</fullName>
                </value>
                <value>
                    <fullName>PH3</fullName>
                </value>
                <value>
                    <fullName>PH4</fullName>
                </value>
                <value>
                    <fullName>PH5</fullName>
                </value>
                <value>
                    <fullName>PH6</fullName>
                </value>
                <value>
                    <fullName>PH7</fullName>
                </value>
                <value>
                    <fullName>PH8</fullName>
                </value>
                <value>
                    <fullName>PH9</fullName>
                </value>
                <value>
                    <fullName>FRB4</fullName>
                </value>
                <value>
                    <fullName>FRB5</fullName>
                </value>
                <value>
                    <fullName>FRB6</fullName>
                </value>
                <value>
                    <fullName>FRB7</fullName>
                </value>
                <value>
                    <fullName>FRB8</fullName>
                </value>
                <value>
                    <fullName>FRB9</fullName>
                </value>
                <value>
                    <fullName>FRB10</fullName>
                </value>
                <value>
                    <fullName>Reason Code</fullName>
                </value>
                <value>
                    <fullName>Sales Reduction</fullName>
                </value>
                <value>
                    <fullName>Customer Group 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mixed_Values_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mixed Values Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Lists2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mixed_Values__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mixed Values</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Setup_Objects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Organisation__c</fullName>
        <label>Sales Organisation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Approver List</label>
    <nameField>
        <label>Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approver Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>